--- a/frontend/src/app/layouts/primary-layout/components/sidebar/sidebar.component.scss
+++ b/frontend/src/app/layouts/primary-layout/components/sidebar/sidebar.component.scss
@@ -7,24 +7,21 @@
 }
 
 .sidebar {
-  width: 250px;
-  height: 100vh;
+  width: 280px;
+  height: 100%;
   overflow-y: auto;
   display: flex;
   flex-direction: column;
   justify-content: space-between;
-  padding: 20px 10px;
-  border-right: 2px solid #f2f2f2;
-  -ms-overflow-style: none;
-  scrollbar-width: none;
-  background: #111727;
+  padding: 20px 16px;
+  background: $background-sidebar;
 
   @media (max-width: $sm) {
     display: none;
   }
 
-  &::-webkit-scrollbar {
-    display: none;
+  &__wrapper {
+    height: 100vh;
   }
 
   &__logo {
@@ -55,7 +52,7 @@
       border-radius: 8px;
 
       &:hover {
-        background: #3c4655;
+        background: $primary-light;
       }
 
       &-label {
@@ -63,10 +60,10 @@
       }
 
       &-active {
-        background: $background-active;
+        background: $primary;
 
         &:hover {
-          background: #6a727e;
+          background: $primary-light;
         }
       }
 
