--- a/frontend/src/app/layouts/primary-layout/primary-layout.component.scss
+++ b/frontend/src/app/layouts/primary-layout/primary-layout.component.scss
@@ -7,8 +7,8 @@
   overflow-x: hidden;
   font-family: $primary-ff, sans-serif;
   font-size: $text-sm;
-  color: black;
-  background: #fafcff;
+  color: $text-black;
+  background: $background-light;
   position: relative;
 }
 
@@ -21,4 +21,5 @@
 .content {
   max-height: calc(100vh - 68px);
   overflow-y: auto;
+  overflow-x: hidden;
 }
