--- a/frontend/src/app/teams/submodules/tasks/components/create-task-dialog/create-task-dialog.component.html
+++ b/frontend/src/app/teams/submodules/tasks/components/create-task-dialog/create-task-dialog.component.html
@@ -95,17 +95,19 @@
       </mat-chip-grid>
     </mat-form-field>
 
-    <div class="ctask__form-toolbar">
-      <button
-        type="submit"
-        mat-flat-button
-        color="primary"
-        [disabled]="form.invalid"
-        (click)="onSubmit()"
-      >
-        Create
-      </button>
-      <button mat-stroked-button (click)="onBackClick()">Back</button>
-    </div>
+    <div class="ctask__form-toolbar"></div>
   </form>
 </section>
+
+<mat-dialog-actions align="end">
+  <button mat-stroked-button (click)="onBackClick()">Back</button>
+  <button
+    type="submit"
+    mat-flat-button
+    color="primary"
+    [disabled]="form.invalid"
+    (click)="onSubmit()"
+  >
+    Create
+  </button>
+</mat-dialog-actions>
