--- a/frontend/src/app/teams/submodules/tasks/components/list-view/list-view.component.html
+++ b/frontend/src/app/teams/submodules/tasks/components/list-view/list-view.component.html
@@ -1,8 +1,6 @@
-<div>
-  <mat-accordion class="list">
-    <app-list-panel
-      *ngFor="let column of columns; let i = index"
-      [column]="column"
-    ></app-list-panel>
-  </mat-accordion>
-</div>
+<mat-accordion class="list" multi="true">
+  <app-list-panel
+    *ngFor="let column of columns; let i = index"
+    [column]="column"
+  ></app-list-panel>
+</mat-accordion>
