--- a/frontend/src/styles.scss
+++ b/frontend/src/styles.scss
@@ -59,6 +59,11 @@
     box-shadow: rgba(100, 100, 111, 0.2) 0px 7px 29px 0px;
   }
 
+  .mat-mdc-select-arrow {
+    width: 22px;
+    height: 22px;
+  }
+
   .mdc-dialog .mdc-dialog__content {
     padding: 0 22px;
   }
