--- a/frontend/src/app/teams/submodules/meetings/components/create-meeting-dialog/create-meeting-dialog.component.html
+++ b/frontend/src/app/teams/submodules/meetings/components/create-meeting-dialog/create-meeting-dialog.component.html
@@ -51,18 +51,18 @@
         <input matInput formControlName="endTime" type="time" />
       </mat-form-field>
     </div>
-
-    <div class="ctask__form-toolbar">
-      <button
-        type="submit"
-        mat-flat-button
-        color="primary"
-        [disabled]="form.invalid"
-        (click)="onSubmit()"
-      >
-        Create
-      </button>
-      <button mat-stroked-button (click)="onBackClick()">Back</button>
-    </div>
   </form>
 </section>
+
+<mat-dialog-actions mat-dialog-actions align="end">
+  <button mat-stroked-button (click)="onBackClick()">Back</button>
+  <button
+    type="submit"
+    mat-flat-button
+    color="primary"
+    [disabled]="form.invalid"
+    (click)="onSubmit()"
+  >
+    Create
+  </button>
+</mat-dialog-actions>
