--- a/frontend/src/app/teams/submodules/meetings/components/meetings-selected-dialog/meetings-selected-dialog.component.html
+++ b/frontend/src/app/teams/submodules/meetings/components/meetings-selected-dialog/meetings-selected-dialog.component.html
@@ -1,46 +1,47 @@
-<ng-container *ngIf="selectedMeeting">
-  <div mat-dialog-content class="selected-meeting-card">
-    <div class="selected-meeting-header">
-      <p class="selected-meeting-title">{{ selectedMeeting.title }}</p>
+<h4 mat-dialog-title class="selected-meeting-title" *ngIf="selectedMeeting">
+  {{ selectedMeeting.title }}
+</h4>
+
+<section
+  mat-dialog-content
+  *ngIf="selectedMeeting"
+  class="selected-meeting-card"
+>
+  <div class="selected-meeting-detail-list">
+    <div class="selected-meeting-detail">
+      <p class="selected-meeting-detail-label">Description</p>
+      <p class="selected-meeting-detail-desc">
+        {{ selectedMeeting.description }}
+      </p>
     </div>
 
-    <div class="selected-meeting-detail-list">
-      <div class="selected-meeting-detail">
-        <p class="selected-meeting-detail-label">Description</p>
-        <p class="selected-meeting-detail-desc">
-          {{ selectedMeeting.description }}
-        </p>
-      </div>
-
-      <div class="selected-meeting-detail">
-        <p class="selected-meeting-detail-label">Status</p>
-        <p class="selected-meeting-detail-desc">
-          {{ selectedMeeting.status }}
-        </p>
-      </div>
-
-      <div class="selected-meeting-detail">
-        <p class="selected-meeting-detail-label">Paricapants</p>
-        <p class="selected-meeting-detail-desc">
-          Diar B. Alexander L. Eliot M.
-        </p>
-      </div>
-
-      <div class="selected-meeting-detail">
-        <p class="selected-meeting-detail-label">Boarding Time</p>
-        <p class="selected-meeting-detail-desc">
-          {{ selectedMeeting.date | date : "MMM d, h:mm a" }}
-        </p>
-      </div>
+    <div class="selected-meeting-detail">
+      <p class="selected-meeting-detail-label">Status</p>
+      <p class="selected-meeting-detail-desc">
+        {{ selectedMeeting.status }}
+      </p>
     </div>
 
-    <button
-      mat-flat-button
-      color="primary"
-      class="selected-meeting__button"
-      (click)="onJoinMeetingClick()"
-    >
-      Join meeting
-    </button>
+    <div class="selected-meeting-detail">
+      <p class="selected-meeting-detail-label">Paricapants</p>
+      <p class="selected-meeting-detail-desc">Diar B. Alexander L. Eliot M.</p>
+    </div>
+
+    <div class="selected-meeting-detail">
+      <p class="selected-meeting-detail-label">Boarding Time</p>
+      <p class="selected-meeting-detail-desc">
+        {{ selectedMeeting.date | date : "MMM d, h:mm a" }}
+      </p>
+    </div>
   </div>
-</ng-container>
+</section>
+<mat-dialog-actions align="center">
+  <button
+    mat-flat-button
+    color="primary"
+    class="selected-meeting__button"
+    (click)="onJoinMeetingClick()"
+  >
+    Join meeting
+  </button>
+</mat-dialog-actions>
