--- a/frontend/src/app/teams/submodules/meetings/pages/meeting-room/meeting-room.component.scss
+++ b/frontend/src/app/teams/submodules/meetings/pages/meeting-room/meeting-room.component.scss
@@ -165,7 +165,7 @@
       background: #fff;
       position: fixed;
       width: 100%;
-      bottom: 24px;
+      bottom: 0px;
       left: 0;
       right: 0;
 
@@ -173,10 +173,10 @@
       align-items: center;
       gap: 8px;
       justify-content: center;
-      padding: 0 16px;
+      padding: 22px;
       margin-top: 14px;
 
-      @media (min-width: $md) {
+      @media (min-width: $sm) {
         position: static;
       }
 
