Added analytics from vercel, UI fixes

--- a/frontend/src/app/teams/submodules/tasks/components/task-details-sidebar/task-details-sidebar.component.html
+++ b/frontend/src/app/teams/submodules/tasks/components/task-details-sidebar/task-details-sidebar.component.html
@@ -30,7 +30,7 @@
       <p class="sidebar__details-item-label">Tags:</p>
       <p class="sidebar__details-item-value">Development, Testing</p>
     </div>
-
-    <button mat-stroked-button>Attached files</button>
   </div>
+
+  <button mat-stroked-button class="sidebar__attached">Attached files</button>
 </aside>
