--- a/frontend/src/app/teams/submodules/chats/components/chats-sidebar/chats-sidebar.component.html
+++ b/frontend/src/app/teams/submodules/chats/components/chats-sidebar/chats-sidebar.component.html
@@ -1,9 +1,20 @@
 <aside class="sidebar">
   <div class="create_chat">
     <h4>Messages</h4>
-    <button (click)="onCreateChatClick()">
-      <mat-icon>add_circle</mat-icon>
+
+    <button [matMenuTriggerFor]="createMenu">
+      <mat-icon>add</mat-icon>
     </button>
+    <mat-menu #createMenu="matMenu">
+      <button mat-menu-item (click)="onCreateSingleClick()">
+        <mat-icon>person</mat-icon>
+        <span>Personal chat</span>
+      </button>
+      <button mat-menu-item (click)="onCreateGroupClick()">
+        <mat-icon>group</mat-icon>
+        <span>Group chat</span>
+      </button>
+    </mat-menu>
   </div>
 
   <form [formGroup]="searchForm" class="sidebar__search">
