--- a/frontend/src/app/teams/submodules/chats/components/chats-sidebar/chats-sidebar.component.scss
+++ b/frontend/src/app/teams/submodules/chats/components/chats-sidebar/chats-sidebar.component.scss
@@ -13,7 +13,7 @@
   }
 
   &__search {
-    padding: 22px;
+    padding: 0 22px 0;
 
     &-input {
       width: 100%;
@@ -25,7 +25,7 @@
   }
 
   &__list {
-    padding: 0px 22px;
+    padding: 22px 22px 0;
     display: flex;
     flex-direction: column;
     gap: 6px;
@@ -96,14 +96,18 @@
 }
 
 .create_chat {
+  position: sticky;
+  top: 0;
+  background: #ffffff;
+  padding: 22px 36px 26px;
+
   display: flex;
   align-items: center;
-  padding: 22px 34px 0;
   justify-content: space-between;
   gap: 12px;
 
   & h4 {
-    font-size: 18px;
+    font-size: 20px;
     font-weight: 500;
   }
 
@@ -112,9 +116,15 @@
     align-items: center;
     justify-content: center;
     gap: 8px;
+    background: $primary;
+    padding: 4px;
+    border-radius: 9999px;
   }
 
   & mat-icon {
-    color: $primary;
+    font-size: 16px;
+    width: 16px;
+    height: 16px;
+    color: $text-white;
   }
 }
