--- a/frontend/src/app/teams/submodules/chats/components/dialogs/create-single-dialog/create-single-dialog.component.html
+++ b/frontend/src/app/teams/submodules/chats/components/dialogs/create-single-dialog/create-single-dialog.component.html
@@ -1,14 +1,9 @@
-<h1 mat-dialog-title class="create-chat__title">Create a new chat room</h1>
+<h1 mat-dialog-title class="create-chat__title">Create a new single chat</h1>
 <section mat-dialog-content>
   <form [formGroup]="form" class="create-chat__form">
     <mat-form-field appearance="outline">
-      <mat-label>Group Name</mat-label>
-      <input matInput formControlName="name" />
-    </mat-form-field>
-
-    <mat-form-field appearance="outline">
       <mat-label>Members</mat-label>
-      <mat-select formControlName="members" multiple>
+      <mat-select formControlName="member">
         <ng-container *ngFor="let member of members; trackBy: memberTrackBy">
           <mat-option [value]="member.id">{{ member.name }}</mat-option>
         </ng-container>
