--- a/frontend/src/app/teams/submodules/tasks/components/dialogs/customize-dialog/customize-dialog.component.html
+++ b/frontend/src/app/teams/submodules/tasks/components/dialogs/customize-dialog/customize-dialog.component.html
@@ -2,7 +2,7 @@
 
 <section class="sc" mat-dialog-content>
   <div class="sc__open">
-    <h5>Done Status</h5>
+    <h5>Open Status</h5>
 
     <app-customize-status-item
       [item]="{ label: 'Open', color: '#000' }"
@@ -29,7 +29,7 @@
   </div>
 
   <div class="sc__closed">
-    <h5>Closed Status</h5>
+    <h5>Done Status</h5>
 
     <app-customize-status-item
       [item]="{ label: 'Done', color: '#000' }"
