--- a/frontend/src/app/teams/submodules/tasks/pages/task-view/task-view.component.html
+++ b/frontend/src/app/teams/submodules/tasks/pages/task-view/task-view.component.html
@@ -21,9 +21,48 @@
       </main>
 
       <div class="vtask__comments">
-        <h4 class="vtask__comments-title">Comments</h4>
+        <h4 class="vtask__comments-title">Notes</h4>
+        <form class="vtask__comments-form">
+          <mat-form-field appearance="outline">
+            <textarea
+              matInput
+              cdkTextareaAutosize
+              cdkAutosizeMinRows="1"
+              placeholder="Leave a note"
+            ></textarea>
+          </mat-form-field>
+
+          <button mat-stroked-button type="button" class="vtask__comments-send">
+            <mat-icon>send</mat-icon>
+            <span>Send</span>
+          </button>
+        </form>
         <div class="vtask__comments-list">
-          <p>Comment 1</p>
+          <div class="vtask__comments-item">
+            <div class="vtask__comments-item-header">
+              <p class="vtask__comments-item-header-title">Shamil Sabirov</p>
+              <p class="vtask__comments-item-header-date">11 September</p>
+            </div>
+            <div class="vtask__comments-item-body">
+              Lorem ipsum dolor sit amet consectetur adipisicing elit. Quis
+              doloribus similique consequuntur. Ea voluptatibus a quo doloremque
+              autem aliquam, qui accusantium? Cum totam libero non sunt, ut quo
+              deserunt veritatis?
+            </div>
+          </div>
+
+          <div class="vtask__comments-item">
+            <div class="vtask__comments-item-header">
+              <p class="vtask__comments-item-header-title">Shamil Sabirov</p>
+              <p class="vtask__comments-item-header-date">11 September</p>
+            </div>
+            <div class="vtask__comments-item-body">
+              Lorem ipsum dolor sit amet consectetur adipisicing elit. Quis
+              doloribus similique consequuntur. Ea voluptatibus a quo doloremque
+              autem aliquam, qui accusantium? Cum totam libero non sunt, ut quo
+              deserunt veritatis?
+            </div>
+          </div>
         </div>
       </div>
     </div>
