--- a/frontend/src/app/teams/submodules/tasks/pages/task-view/task-view.component.scss
+++ b/frontend/src/app/teams/submodules/tasks/pages/task-view/task-view.component.scss
@@ -1,8 +1,19 @@
+@import "vars";
+
+mat-form-field {
+  width: 100%;
+}
+
 .vtask {
   &__wrapper {
     display: flex;
     align-items: flex-start;
     gap: 22px;
+
+    @media (max-width: $lg) {
+      flex-direction: column;
+      gap: 1rem;
+    }
   }
 
   &__left {
@@ -11,23 +22,16 @@
     display: flex;
     flex-direction: column;
     gap: 22px;
+
+    @media (max-width: $lg) {
+      order: 2;
+    }
   }
 
   &__content {
     background: #ffffff;
     border-radius: 8px;
     padding: 22px;
-  }
-
-  &__comments {
-    background: #ffffff;
-    border-radius: 8px;
-    padding: 22px;
-
-    &-title {
-      font-size: 16px;
-      font-weight: 500;
-    }
   }
 
   &__header {
@@ -47,21 +51,66 @@
     margin: 22px 0px;
   }
 
-  &__files {
-    margin-top: 22px;
+  &__comments {
+    background: #ffffff;
+    border-radius: 8px;
+    padding: 22px;
 
     &-title {
+      font-size: 16px;
       font-weight: 500;
     }
 
-    &-list {
-      margin-top: 6px;
+    &-form {
+      margin-top: 1rem;
+    }
 
-      p {
-        cursor: pointer;
-        color: #83b5e4;
-        text-decoration: underline;
+    &-send {
+      margin-top: -12px;
+      float: right;
+    }
+
+    &-list {
+      margin-top: 3rem;
+      display: flex;
+      flex-direction: column;
+      gap: 2rem;
+    }
+
+    &-item {
+      border-radius: 8px;
+
+      &-header {
+        display: flex;
+        align-items: center;
+        gap: 12px;
+
+        &-title {
+          font-size: 12px;
+          font-weight: 600;
+        }
+
+        &-date {
+          font-size: 12px;
+          color: #979797;
+        }
+      }
+
+      &-body {
+        margin-top: 6px;
+        font-size: 14px;
       }
     }
   }
+}
+
+app-task-details-sidebar {
+  @media (max-width: $lg) {
+    width: 100%;
+    order: 1;
+  }
+}
+
+textarea {
+  width: 100%;
 }
