--- a/frontend/src/app/teams/submodules/meetings/components/meetings-filter/meetings-filter.component.html
+++ b/frontend/src/app/teams/submodules/meetings/components/meetings-filter/meetings-filter.component.html
@@ -10,31 +10,23 @@
           <mat-select formControlName="view">
             <mat-option
               *ngFor="let view of views"
-              [matTooltip]="view"
-              [value]="view"
+              [matTooltip]="view.name"
+              [value]="view.id"
             >
-              {{ view }}
+              {{ view.name }}
             </mat-option>
           </mat-select>
         </mat-form-field>
 
         <mat-form-field appearance="outline">
           <mat-label>Particapants</mat-label>
-          <mat-select formControlName="executor" multiple>
-            <mat-option
-              *ngFor="let dparticapants of defaultParticapants"
-              [matTooltip]="dparticapants"
-              [value]="dparticapants"
-            >
-              {{ dparticapants }}
-            </mat-option>
-            <mat-divider></mat-divider>
+          <mat-select formControlName="particapants" multiple>
             <mat-option
               *ngFor="let particapant of particapants"
-              [matTooltip]="particapant"
-              [value]="particapant"
+              [matTooltip]="particapant.name"
+              [value]="particapant.id"
             >
-              {{ particapant }}
+              {{ particapant.name }}
             </mat-option>
           </mat-select>
         </mat-form-field>
@@ -44,10 +36,10 @@
           <mat-select formControlName="sort">
             <mat-option
               *ngFor="let sort of sortings"
-              [matTooltip]="sort"
-              [value]="sort"
+              [matTooltip]="sort.name"
+              [value]="sort.id"
             >
-              {{ sort }}
+              {{ sort.name }}
             </mat-option>
           </mat-select>
         </mat-form-field>
