--- a/frontend/src/app/teams/submodules/tasks/components/tasks-filter/tasks-filter.component.scss
+++ b/frontend/src/app/teams/submodules/tasks/components/tasks-filter/tasks-filter.component.scss
@@ -11,6 +11,8 @@
 }
 
 .filter {
+  margin-top: 22px;
+
   &__fields {
     display: grid;
     grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
