--- a/frontend/src/app/shared/ui/button/button.component.scss
+++ b/frontend/src/app/shared/ui/button/button.component.scss
@@ -1,11 +1,18 @@
 @import "vars";
 
 .button {
-  padding: 0.5rem 1.5rem;
-  border-radius: 0.375rem;
+  width: 100%;
+  padding: 0.38rem 1rem;
+  border-radius: 4px;
   display: flex;
   align-items: center;
-  gap: 8px;
+  justify-content: center;
+  flex-wrap: nowrap;
+  gap: 10px;
+  overflow: hidden;
+
+  text-wrap: nowrap;
+  text-overflow: ellipsis;
 
   &__icon {
     font-size: 18px;
@@ -21,7 +28,7 @@
   }
 
   &-outline {
-    border: 1px solid #e5e7eb;
+    border: 1px solid #0000002a;
     &:hover {
       background-color: #edf2f7;
     }
