--- a/frontend/src/app/teams/submodules/dashboard/components/dashboard-toolbar/dashboard-toolbar.component.scss
+++ b/frontend/src/app/teams/submodules/dashboard/components/dashboard-toolbar/dashboard-toolbar.component.scss
@@ -1,17 +1,17 @@
 @import "vars";
 
-h1 {
-  font-size: 22px;
-  font-weight: 500;
-}
-
-.meetings__toolbar {
+.dashboard__toolbar {
   display: flex;
   align-items: center;
-  gap: 1rem;
   justify-content: space-between;
+  gap: 1rem;
   overflow-x: auto;
   overflow-y: hidden;
+
+  &-title {
+    font-size: 22px;
+    font-weight: 500;
+  }
 
   &-left {
     display: flex;
@@ -27,5 +27,10 @@ h1 {
     display: flex;
     align-items: center;
     gap: 1rem;
+  }
+
+  &-item {
+    text-overflow: ellipsis;
+    text-wrap: nowrap;
   }
 }
