--- a/frontend/src/app/teams/submodules/meetings/components/meetings-toolbar/meetings-toolbar.component.html
+++ b/frontend/src/app/teams/submodules/meetings/components/meetings-toolbar/meetings-toolbar.component.html
@@ -8,21 +8,20 @@
       <p>Customize</p>
     </button> -->
 
-    <button mat-stroked-button class="meetings__toolbar-item">
-      <mat-icon>download</mat-icon>
-      <p>Export</p>
-    </button>
+    <h1>Upcoming Meetings</h1>
   </div>
 
   <div class="meetings__toolbar-right">
-    <button
-      mat-flat-button
-      color="primary"
-      class="meetings__toolbar-itme"
+    <app-button variant="outline" class="meetings__toolbar-item" icon="share">
+      <p>Share</p>
+    </app-button>
+
+    <app-button
+      class="meetings__toolbar-item"
+      icon="add"
       (click)="onCreateButtonClick($event)"
     >
-      <mat-icon class="meetings__toolbar-icon">add</mat-icon>
-      <p>Add new meeting</p>
-    </button>
+      <p>Add New</p>
+    </app-button>
   </div>
 </div>
