--- a/frontend/src/app/teams/submodules/tasks/components/tasks-toolbar/tasks-toolbar.component.html
+++ b/frontend/src/app/teams/submodules/tasks/components/tasks-toolbar/tasks-toolbar.component.html
@@ -1,33 +1,28 @@
 <div class="tasks__toolbar">
   <div class="tasks__toolbar-left">
-    <button
-      mat-stroked-button
-      class="tasks__toolbar-item"
-      (click)="onCustomizeClick($event)"
-    >
-      <mat-icon class="tasks__toolbar-icon">settings</mat-icon>
-      <p>Customize</p>
-    </button>
-
-    <button
-      mat-stroked-button
-      class="tasks__toolbar-item"
-      (click)="onCustomizeClick($event)"
-    >
-      <mat-icon>download</mat-icon>
-      <p>Export</p>
-    </button>
+    <h1 class="tasks__toolbar-title">Tasks</h1>
   </div>
 
   <div class="tasks__toolbar-right">
-    <button
-      mat-flat-button
-      color="primary"
-      class="tasks__toolbar-itme"
-      (click)="onAddNewClick($event)"
+    <app-button
+      variant="outline"
+      class="tasks__toolbar-item"
+      icon="settings"
+      (click)="onCustomizeClick($event)"
     >
-      <mat-icon class="tasks__toolbar-icon">add</mat-icon>
-      <p>Add new task</p>
-    </button>
+      <p>Customize</p>
+    </app-button>
+
+    <app-button variant="outline" class="tasks__toolbar-item" icon="share">
+      <p>Share</p>
+    </app-button>
+
+    <app-button
+      class="tasks__toolbar-item"
+      (click)="onAddNewClick($event)"
+      icon="add"
+    >
+      <p>Add New</p>
+    </app-button>
   </div>
 </div>
