--- a/frontend/src/app/teams/submodules/meetings/components/views/meetings-list-view/components/meeting-list-item/meeting-list-item.component.html
+++ b/frontend/src/app/teams/submodules/meetings/components/views/meetings-list-view/components/meeting-list-item/meeting-list-item.component.html
@@ -6,7 +6,7 @@
   <div class="meetings__item-bottom">
     <p class="meetings__item-status">{{ meeting.status }}</p>
     <p class="meetings__item-date">
-      {{ meeting.date | date : "MMM d, h:mm a" }}
+      {{ meeting.start | date : "MMM d, h:mm a" }}
     </p>
   </div>
 </div>
