--- a/frontend/src/assets/styles/_vars.scss
+++ b/frontend/src/assets/styles/_vars.scss
@@ -24,7 +24,7 @@ $background-active: #0d0e10;
 $background-active-light: #ebedef;
 
 $text-white: #f4f5f5;
-$text-black: #010a16;
+$text-black: #242424;
 
 $kaiteki-primary-palette: (
   50: #84afed,
