--- a/frontend/src/app/teams/submodules/posts/pages/posts/posts.component.html
+++ b/frontend/src/app/teams/submodules/posts/pages/posts/posts.component.html
@@ -1,26 +1,20 @@
-<div class="wrapper">
-  <div class="posts__content">
-    <div class="posts__content-header">
-      <h1>Recent posts</h1>
-      <app-button variant="solid" icon="edit">Write</app-button>
-    </div>
+<section class="page posts__wrapper">
+  <div class="posts__main">
+    <app-posts-toolbar></app-posts-toolbar>
+    <app-posts-filter></app-posts-filter>
 
-    <div class="posts__content-list">
-      <ng-container *ngFor="let post of posts">
-        <app-post-item></app-post-item>
-      </ng-container>
+    <div class="posts__content">
+      <app-posts-list-view [posts]="posts"></app-posts-list-view>
     </div>
   </div>
 
   <div class="posts__sidebar">
     <div class="posts__content-header">
-      <h1>Pinned</h1>
+      <h1>Favourites</h1>
     </div>
 
-    <div class="posts__content-list">
-      <ng-container *ngFor="let post of posts">
-        <app-post-item></app-post-item>
-      </ng-container>
+    <div class="posts__content">
+      <app-posts-list-view [posts]="pinnedPosts"></app-posts-list-view>
     </div>
   </div>
-</div>
+</section>
