--- a/frontend/src/app/teams/submodules/posts/pages/post/post.component.scss
+++ b/frontend/src/app/teams/submodules/posts/pages/post/post.component.scss
@@ -19,6 +19,10 @@
     border-radius: 12px;
     padding: 34px;
     border: 1px solid #ebeaea;
+
+    @media (max-width: $md) {
+      padding: 22px;
+    }
   }
 
   &__title {
