Create overview page and error fixes

--- a/frontend/src/app/error-page/error-page.component.html
+++ b/frontend/src/app/error-page/error-page.component.html
@@ -1,2 +1,6 @@
-<p>ERROR PAGE WORKS</p>
-<button routerLink="/">Return Home</button>
+<div class="error__wrapper">
+  <h1 class="error__title">404 Error</h1>
+  <p class="error__description">Sorry, page not found</p>
+
+  <button class="error__button" (click)="onBackClick()">Back to home</button>
+</div>
