--- a/frontend/src/app/teams/submodules/dashboard/components/dashboard-sidebar/dashboard-sidebar.component.html
+++ b/frontend/src/app/teams/submodules/dashboard/components/dashboard-sidebar/dashboard-sidebar.component.html
@@ -47,6 +47,11 @@
     </div>
   </div>
 
+  <div class="dashboard__sidebar-chart">
+    <h4 class="dashboard__sidebar-title">Tasks Ratio</h4>
+    <canvas id="canvas-dashboard-teams-tasks">{{ chart }}</canvas>
+  </div>
+
   <div class="dashboard__sidebar-events-wrapper">
     <h4 class="dashboard__sidebar-title">Upcoming Events</h4>
     <div class="dashboard__sidebar-events">
@@ -66,6 +71,4 @@
       </div>
     </div>
   </div>
-
-  <!-- TODO: Add one more metric here -->
 </div>
