--- a/frontend/src/app/teams/submodules/meetings/components/views/meetings-calendar-view/meetings-calendar-view.component.scss
+++ b/frontend/src/app/teams/submodules/meetings/components/views/meetings-calendar-view/meetings-calendar-view.component.scss
@@ -39,13 +39,17 @@
     border-bottom: unset;
   }
 
+  .cal-week-view .cal-header.cal-weekend span {
+    color: #010a16;
+  }
+
   .cal-week-view .cal-header.cal-today {
     background: $primary;
     color: $text-white;
-  }
 
-  .cal-week-view .cal-header.cal-weekend span {
-    color: #010a16;
+    & span {
+      color: $text-white;
+    }
   }
 }
 
