--- a/frontend/src/app/layouts/primary-layout/components/sidebar/sidebar.component.scss
+++ b/frontend/src/app/layouts/primary-layout/components/sidebar/sidebar.component.scss
@@ -1,11 +1,5 @@
 @import "vars";
 
-:host {
-  button {
-    padding: 0rem !important;
-  }
-}
-
 .sidebar {
   width: 280px;
   height: 100%;
@@ -18,6 +12,23 @@
 
   @media (max-width: $sm) {
     display: none;
+  }
+
+  &__create {
+    cursor: pointer;
+    color: #61718a;
+    padding: 8px 10px;
+    border-radius: 8px;
+    border: 1px dashed #61718a;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    gap: 12px;
+
+    &:hover {
+      color: #f9fafe;
+      background: #3c4655;
+    }
   }
 
   &__wrapper {
