--- a/frontend/src/app/teams/submodules/dashboard/components/dashboard-sidebar/dashboard-sidebar.component.scss
+++ b/frontend/src/app/teams/submodules/dashboard/components/dashboard-sidebar/dashboard-sidebar.component.scss
@@ -12,7 +12,6 @@
     padding: 24px 20px;
     border-radius: 8px;
     background: #fff;
-    overflow-y: auto;
 
     &-title {
       font-size: 18px;
@@ -97,6 +96,13 @@
     &-divider {
       margin: 30px 0;
       border-color: #e9e9e9;
+    }
+
+    &-chart {
+      & canvas {
+        margin-top: 24px;
+        height: 180px;
+      }
     }
   }
 }
