Notes overlay sidebar issue

--- a/frontend/src/app/notes/pages/note-edit/note-edit.component.html
+++ b/frontend/src/app/notes/pages/note-edit/note-edit.component.html
@@ -1,6 +1,6 @@
 <app-page-header value="Note Edit"></app-page-header>
 
-<section class="page">
+<section class="page note">
   <div class="note__header">
     <button routerLink="../" class="note__back">
       <app-icon icon="keyboard_arrow_left" [size]="26"></app-icon>
