--- a/frontend/src/app/layouts/primary-layout/components/mobile-sidebar/mobile-sidebar.component.scss
+++ b/frontend/src/app/layouts/primary-layout/components/mobile-sidebar/mobile-sidebar.component.scss
@@ -9,7 +9,7 @@
   height: 100vh;
   width: 100%;
   background: #00000081;
-  z-index: 10;
+  z-index: 999999;
 }
 
 .toggle_button {
@@ -18,10 +18,6 @@
 }
 
 :host {
-  button {
-    padding: 0rem !important;
-  }
-
   .toggle-icon {
     color: #838992;
     cursor: pointer;
@@ -48,6 +44,23 @@
     padding: 0 20px;
     cursor: pointer;
     color: #f9fafe;
+  }
+
+  &__create {
+    cursor: pointer;
+    color: #61718a;
+    padding: 8px 10px;
+    border-radius: 8px;
+    border: 1px dashed #61718a;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    gap: 12px;
+
+    &:hover {
+      color: #f9fafe;
+      background: #3c4655;
+    }
   }
 
   &__nav {
