--- a/frontend/src/app/landing/components/navbar/navbar.component.html
+++ b/frontend/src/app/landing/components/navbar/navbar.component.html
@@ -46,7 +46,7 @@
       >
         {{ navbarPages["sales"].label }}
       </a>
-      <button mat-flat-button color="primary" routerLink="overview">
+      <button mat-flat-button color="primary" routerLink="login">
         Get started
       </button>
       <button class="nav__right-menu" (click)="onToggleMenu()">
